--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -56,11 +56,12 @@ bind K kill-server
 bind l source-file ~/.tmux.conf 
 # load powerline module for the status bar
 run-shell "powerline-daemon -q"
-source /usr/share/powerline/bindings/tmux/powerline.conf
+#source /usr/share/powerline/bindings/tmux/powerline.conf
 # Install Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'dracula/tmux'
 run '~/.tmux/plugins/tpm/tpm'
