--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -4,7 +4,7 @@ unbind C-b
 set -g prefix C-z
 bind C-z send-prefix
 # if attach session does not have any window to attach to, create a new session
-new-session -n $HOST
+new-session -A -s main
 # allow window to be renamed by the process that was on it
 set-window-option automatic-rename on
 # set options
@@ -22,15 +22,24 @@ set -g status-keys emacs
 set -g status-interval 5
 set -g message-style "fg=yellow"
 set -g @continuum-save-interval '60'
+set -g @dracula-plugins "cpu-usage network git time weather"
+set -g @dracula-show-powerline true
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon window
+set -g @dracula-show-timezone false
+set -g @dracula-military-time true
+set -g @dracula-show-fahrenheit false
+set -g @dracula-border-contrast true
+set -g @dracula-git-no-repo-message "⛔️"
 # unbind default keys
 unbind '"'
 unbind %
 unbind n
 unbind p
 unbind S
-unbind c
 unbind K
 unbind l
+unbind c
 bind -n M-Up resize-pane -U 5
 bind -n M-Down resize-pane -D 5
 bind -n M-Left resize-pane -L 5
@@ -53,10 +62,7 @@ bind p paste-buffer
 bind r command-prompt -I "#W" "rename-window '%%'"
 bind R command-prompt -I "#W" "rename-session '%%'"
 bind K kill-server
-bind l source-file ~/.tmux.conf 
-# load powerline module for the status bar
-run-shell "powerline-daemon -q"
-#source /usr/share/powerline/bindings/tmux/powerline.conf
+bind l source-file ~/.tmux.conf \; display "Config Reloaded"
 # Install Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
