--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -37,7 +37,6 @@ unbind %
 unbind n
 unbind p
 unbind S
-unbind K
 unbind l
 unbind c
 bind -n M-Up resize-pane -U 5
@@ -53,15 +52,14 @@ bind -n M-V split-window -v
 bind -n M-n next-window
 bind -n M-p previous-window
 bind -n C-n new-window
-bind -n C-K kill-window
-bind -n C-k kill-pane
 bind -n M-[ copy-mode
 bind -n C-l send-keys C-l \; clear-history
 bind -T copy-mode-vi v send -X begin-selection
 bind p paste-buffer
+bind K kill-window
+bind k kill-pane
 bind r command-prompt -I "#W" "rename-window '%%'"
 bind R command-prompt -I "#W" "rename-session '%%'"
-bind K kill-server
 bind l source-file ~/.tmux.conf \; display "Config Reloaded"
 # Install Plugins
 set -g @plugin 'tmux-plugins/tpm'
