--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -47,8 +47,8 @@ bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
-bind -n M-H split-window -h
-bind -n M-V split-window -v
+bind -n M-h split-window -h
+bind -n M-v split-window -v
 bind -n M-n next-window
 bind -n M-p previous-window
 bind -n C-n new-window
