--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -69,3 +69,4 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
 run '~/.tmux/plugins/tpm/tpm'
+set-option -g default-shell /usr/bin/zsh
